# unsafe-libopus

./: .gitignore  Cargo.toml  README.md  lib.rs
.github/workflows/: test.yml
examples/: opus_compare.rs  opus_demo.rs  opus_encode_regressions.rs  repacketizer_demo.rs  test_opus_api.rs  test_opus_decode.rs  test_opus_encode.rs  test_opus_padding.rs  test_opus_projection.rs
examples/test_opus_encode/: main.rs  opus_encode_regressions.rs
examples/test_opus_projection/: main.rs  simple_matrix.rs
src/: externs.rs  lib.rs  varargs.rs
src/celt/: bands.rs  celt.rs  celt_decoder.rs  celt_encoder.rs  celt_lpc.rs  cwrs.rs  entcode.rs  entdec.rs  entenc.rs  float_cast.rs  kiss_fft.rs  laplace.rs  mathops.rs  mdct.rs  modes.rs  pitch.rs  quant_bands.rs  rate.rs  vq.rs
src/celt/modes/: static_modes_float_h.rs
src/celt/snapshots/: unsafe_libopus__celt__cwrs__test__pvq_u_table.snap
src/celt/tests/: test_unit_cwrs32.rs  test_unit_dft.rs  test_unit_entropy.rs  test_unit_laplace.rs  test_unit_mathops.rs  test_unit_mdct.rs  test_unit_rotation.rs  test_unit_types.rs
src/silk/: A2NLSF.rs  CNG.rs  HP_variable_cutoff.rs  Inlines.rs  LPC_analysis_filter.rs  LPC_fit.rs  LPC_inv_pred_gain.rs  LP_variable_cutoff.rs  NLSF2A.rs  NLSF_VQ.rs  NLSF_VQ_weights_laroia.rs  NLSF_decode.rs  NLSF_del_dec_quant.rs  NLSF_encode.rs  NLSF_stabilize.rs  NLSF_unpack.rs  NSQ.rs  NSQ_del_dec.rs  PLC.rs  SigProc_FIX.rs  VAD.rs  VQ_WMat_EC.rs  ana_filt_bank_1.rs  biquad_alt.rs  bwexpander.rs  bwexpander_32.rs  check_control_input.rs  code_signs.rs  control_SNR.rs  control_audio_bandwidth.rs  control_codec.rs  dec_API.rs  decode_core.rs  decode_frame.rs  decode_indices.rs  decode_parameters.rs  decode_pitch.rs  decode_pulses.rs  decoder_set_fs.rs  define.rs  (+44 more)
src/silk/float/: LPC_analysis_filter_FLP.rs  LPC_inv_pred_gain_FLP.rs  LTP_analysis_filter_FLP.rs  LTP_scale_ctrl_FLP.rs  SigProc_FLP.rs  apply_sine_window_FLP.rs  autocorrelation_FLP.rs  burg_modified_FLP.rs  bwexpander_FLP.rs  corrMatrix_FLP.rs  encode_frame_FLP.rs  energy_FLP.rs  find_LPC_FLP.rs  find_LTP_FLP.rs  find_pitch_lags_FLP.rs  find_pred_coefs_FLP.rs  inner_product_FLP.rs  k2a_FLP.rs  noise_shape_analysis_FLP.rs  pitch_analysis_core_FLP.rs  process_gains_FLP.rs  regularize_correlations_FLP.rs  residual_energy_FLP.rs  scale_copy_vector_FLP.rs  scale_vector_FLP.rs  schur_FLP.rs  sort_FLP.rs  structs_FLP.rs  warped_autocorrelation_FLP.rs  wrappers_FLP.rs
src/silk/resampler/: ar2.rs  down2.rs  down2_3.rs  down_fir.rs  iir_fir.rs  mod.rs  rom.rs  up2_hq.rs
src/silk/tests/: test_unit_LPC_inv_pred_gain.rs
src/src/: analysis.rs  mapping_matrix.rs  mlp.rs  mlp_data.rs  opus.rs  opus_compare.rs  opus_decoder.rs  opus_defines.rs  opus_demo.rs  opus_encoder.rs  opus_multistream.rs  opus_multistream_decoder.rs  opus_multistream_encoder.rs  opus_private.rs  opus_projection_decoder.rs  opus_projection_encoder.rs  repacketizer.rs  repacketizer_demo.rs
src/src/mlp/: analysis_mlp.rs  layers.rs  mod.rs  tansig.rs
src/test/: compare.rs  demo.rs  mod.rs
src/test/demo/: backend.rs  input.rs  mod.rs
src/tests/: test_opus_api.rs  test_opus_decode.rs  test_opus_encode.rs  test_opus_padding.rs  test_opus_projection.rs
src/util/: mod.rs  nalgebra.rs
tests/: opus_api.rs  opus_decode.rs  opus_padding.rs
tests/opus_encode/: main.rs  opus_encode_regressions.rs
tests/opus_projection/: main.rs  simple_matrix.rs
unsafe-libopus-tools/: Cargo.toml
unsafe-libopus-tools/src/: compare.rs  lib.rs
unsafe-libopus-tools/src/demo/: backend.rs  input.rs  mod.rs
upstream-libopus/: Cargo.toml  README.md  build.rs
upstream-libopus/opus/celt/: float_cast.h
upstream-libopus/src/: lib.rs
