[package]
name = "unsafe-libopus"
authors = ["DCNick3"]
version = "0.2.0"
edition = "2021"

repository = "https://github.com/DCNick3/unsafe-libopus"
description = "libopus transpiled to rust by c2rust"

license = "BSD-3-Clause"

[workspace]
members = [
    "upstream-libopus",
    "unsafe-libopus-tools",
]

[profile.release]
debug = true

[dependencies]
# for complex numbers impl
num-traits = "0.2.16"
num-complex = { version = "0.4.1", features = ["bytemuck"] }

# for casting slices between different types
bytemuck = "1.16.1"

# for slicing arrays to other arrays
arrayref = "0.3.7"
const-chunks = "0.3.0"

# better abstractions for multidimensional arrays
ndarray = "0.15.6"
# better abstractions for multidimensional arrays, another crate (I should probably choose one 💀)
nalgebra = "0.33.0"

# iterate over stuff
itertools = "0.13.0"

# for dumping data in ent-dump
hex = { version = "0.4.3", optional = true }

[dev-dependencies]
getrandom = "0.2.15"
insta = "1.29.0"

[features]
# dumps calls to entropy coder to console for easier upstream divergence debugging
# (it's not _only_ entropy coder actually, there are some additional prints where it was found necessary)
ent-dump = [
    "hex"
]
